<resources>
    <string name="app_name">FirstRoad</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_wikipedia">百科</string>
    <string name="title_goods">商品</string>
    <string name="title_primepages">首页</string>
    <string name="title_routes">路线</string>
    <string name="title_mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="destination_top_search">景点/酒店/美食/娱乐</string>
    <string name="destination_everybody_play">大家都在玩</string>

    <string name="mine_my">我的</string>

</resources>
