<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_wikipedia"
        android:icon="@drawable/wikipake"
        android:title="@string/title_wikipedia" />

    <item
        android:id="@+id/navigation_goods"
        android:icon="@drawable/goods"
        android:title="@string/title_goods" />

    <item
        android:id="@+id/navigation_primepages"
        android:icon="@drawable/primepage"
        android:title="@string/title_primepages" />

    <item
        android:id="@+id/navigation_routes"
        android:icon="@drawable/routes"
        android:title="@string/title_routes" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/mine"
        android:title="@string/title_mine" />

</menu>
